# hdf5_cmake

./: .gitignore  CMakeLists.txt  build.sh  data.csv  data_analysis.ipynb  dummy  dummy.cpp  float32_foo.h5  read.ipynb  run_hdf5.sh  writecsv.cpp  writecsv.sh
